@@ -20,8 +20,6 @@
  * @file ucommon/shell.h
  */
 
-#if defined(OLD_STDCPP) || defined(NEW_STDCPP)
-
 #ifndef	_UCOMMON_STRING_H_
 #include <ucommon/string.h>
 #endif
@@ -218,7 +216,5 @@ public:
 };
 		
 END_NAMESPACE
-
-#endif
 
 #endif
