@@ -1,5 +1,6 @@
 from ucommon 3.0.1 to 3.0.2
 - atomic counter and lock class added.
+- shell no longer a second class member of ucommon.
 
 from ucommon 3.0.0 to 3.0.1
 - bug fix and unit test for queueof.
